Converted covariance to standard errors. Need to format

--- a/FittingExercise.ipynb
+++ b/FittingExercise.ipynb
@@ -207,15 +207,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -224,16 +215,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  9.48853179e+00   6.43077890e+04  -1.15315214e+04  -3.73495280e+01]\n"
+     ]
+    },
+    {
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAJQAAACSCAYAAACjZePJAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHKdJREFUeJztnXl0VFW6t59Tc1KVqspcZCABAgKJJgyKomCLdreKqBfk\n2leuCkEUvX2vcttla/N1L/trv+WVZbfQgqQFOygXr3i7BUHUphscQGUIhCkQhkwkZCRzKqnUdL4/\nQoBAUlNqCpxnrazKqtr7vO+p86u999n7ffcRRFEUkZDwE7JQOyBxbSEJSsKvSIKS8CsBFdTGjRsD\nXiccbYSjT8GyIQkqDMpfSzakLk/CryjcFTh8+DD5+fnEx8eTk5PDzJkzg+GXxBDFbQv12Wef8eyz\nz7J06VJ27NhBd3d3MPySGKK4baHmz5/PqlWrMBgMdHZ20tbWRnx8vNsDWywWzGYzFRUVyOVyjx2y\nWq1UVVUFrHwwbISjT97WcTgcmM1mLBYLGo3GYxuCu5nygoICTCYTKSkpLF68mJUrV6JQ9NXhxo0b\nrxrAmc1mysvLPXZEIjxJT09Hq9X2ee/RRx/l0Ucf7be8W0FVVlaybNky9Ho9OTk5zJ071yNHKioq\n+MlPfsKGDRswmUweui8RLtTW1jJv3jy2b99OWlqax/Xcdnmpqam8/fbbXjvU2831tm4SQxNvhisg\nTRtI+JmAC6q1Q7orvJ4IuKBeWrmLLbtKAm1GIkwIuKAcDpH8rUU0t1kCbUoiDAjKGMruECmtbg2G\nKYkQ4/Yub7CoALlcYGSSIdCmJMKAgAsqCYGZs7KI1ns+2yoxdAl4l6dHIDMxKtBmJMKEgAvKlGxg\n+5YinE4pF+J6IOCCmv7j0dTXtFO492ygTUmEAUFpoW6cmMxXXxZj6bIF2pxEiAnKtMGM+8dh7baz\n6x+ng2FOIoQERVCG6Aim3pXB3l2lNJ03B8OkRIgI2uLw1B+NQqtT8/etx4NlUiIEBE1QKrWCe2aO\n4+SxWspOnw+WWYkgE9TwlawJySQPN7L9U2ka4VolqIISZAI/fTiLupo2Du2TphGuRdwuvdTV1bFy\n5Up0Oh0Av/zlLwdlMCUtmqwJyez8opjx2UloIpSDOp5EeOG2hSotLWXPnj3U1tZiNBr9YvTumdI0\nwrWK2xbKZDKRn59PSkoKCxcuZP78+ajV6j5l+st6sVqtAx7TEB3B1B9lsHvnaSbdlkZMnHbAshKh\nZfHixahUqj7vucp6cSuoDRs2MGfOHAB0Oh12u/0qQfVnoKqqirvvvnvA4069axSF+87yj8+O88/z\nb3bnhkSIyMvL8yrJxK2gZs+ezYoVK0hOTiY7O/uqHC1fUakV3D1zHJs/LKTszHlGZMT55bgSocWt\noMaPH09eXl5AjN84IZl9u8vY/mkRi5ZMRyYTAmJHIniENI1KkAn89KFM6qqlaYRrhZDn5aWmx5A1\nIZmvviim2yJFIwx1Qi4ogLtnjqXbYmfXP86E2hWJQRIWgjJER3LbXaPY+60UjTDUCQtBAdx+VwZR\nBjV/eb8Aa7c91O5I+EjYCEqlVnDv3Gwa6jv4y38fQNqPf2gSNoLasquEX679gZN2O2eO17Nm7d5Q\nuyThA2EhqKY2C/lbi7A7RJqBc4jUFjdQICU2DDnCQlBl1a3YHZe6uGpEmhD52ydHqatuC6FnEt4S\nFoIamWRAIe87S14pA2NsJB/9eR9maUugIUPABdVmaXdbJlqvYcGszIuiUsgF5j+YxbynpmCzOvjf\n9wtw2J2BdlXCDwR8b4Pff/175jgf4/4xM1yWe3DaKKZlJ1Na3crIJMPFvRDmPjmZ9Xk/8OXmY8x8\n5KZAuysxSALeQmUpZaw//AktXe6384nWa5g0NrHPxhppo2K5b/aNHPihgoLvy/uUb26zcKC4Ttp7\nKowIeAs1WqngiOikvKWKnAjftvSZdFsa9TVtfLnpGLEJOkZkxLFlV8nFO0OFXGDBrEwenDbKz95L\neEvAWygnMEmjIt04uJ2Af/JQJsNHxvCX9wsoq2i6KCbo2dBM2iUvPAi4oE7bHEyJjESvihjUceRy\nGY88Pgm1Rsnm9QdxOvrOpEu75IUHbgW1YcMGXnnlFV588UVmzHA9sO6PH0+ej8xpp7G6wCcHLydS\np+ZnuTdjMVsZRd9pBoW0S15Y4FZQ8+bN4/XXX8dkMvHOO+94bSDGkIoxIZO6il2I4uBv/ROG6Zk9\nbyJGBFKFS9MMudIueWGBR4Py0tJSHA4HY8eO7fdzd1kviWnTObn/HVobjmNMyBqEuz3ckGXirvtu\n4KsvTnLfjAzumDZSElOA8HvWC8CHH35Ibm7ugJ+7y3rRGtPRGoZTV/6tXwQFcMfdPRuZHfq6lGHR\nkUyemu6X40r0xdusF48G5SUlJSQlJfnslCAIJKZNp6OlDHNrpc/HufKY//TYBCbdmsbnfz3K3zYf\nk/ZLCAM8ElR+fv6gDRkTslBpoqmr+GbQx+pFJpdx3+wsfvpwJvt2l7Exfz/dFik4L5QEbXFYkMlJ\nSJtGc91Rurua/XdcQWDKtJE8mnsLFSXnWbfqO1qbu/x2fAnvCGq0QVzyzcjlKurP7vL7sceMT2TB\nz++gq9PKeyt2UV3Z4ncbEu4JqqDkCg1xKbdyvmofDpv/W5HEJD0Ln5+G3hjBulXfceJIjd9tSLgm\n6PFQCcNvx+m00XAuMCG+UXoNTz53G6PHJfK/7xfw3c4zUnx6EAm6oFQaIzGmHOordiM6HQGxoVQp\neOTxSdw+I4Md206w9ePDUjxVkAhJxGZi2nRs3a001x0JmA1BJnD3zHE8+Gg2Rw5UsWHNHro6B95i\nSMI/hERQkfpkomIyqCv/JuDdUc4tw/nXp2+l9lwbf/7jbimRNMCELKY8MW06ne3n6GguDbit9Iw4\nFj5/B6IIa5fv4tMtx2hqlaYWAkHIBKWPuwGNNoG6cv9NdLoiNl5H0i3J1FisHP6mjP/6v3/no63H\ngmL7eiJkghIEGYlp02k9fwKLuT7g9praLKz/20nOiCLFOJEDJ78u5a8bDtIpZdX4jZCmUcUMm4hC\npaOu4tuA27o8968dKEKkEpGTR2tZ+V9fsX93GU6HdCc4WEIqKJlcSXzqVBqrD2CzdgTU1pW5fyLQ\nKBd48j9u54YsE19sOsaa5buoKG3sU09KhPCOkCd6xqfeBkBD5fcBtdNf7l/urCySkww89LMccv/j\nDmQygfdXfc8n/32Q9lYLW3aVkPvadl5ds4fc17azZVdJQH28Fgh41os7lCodsUmTaTj7Pab0u5DJ\nA7cR/kC5f9CzIf/C56dxaN9Zdmw7wcmiWsptdhxi30SIadnJUjCfC0LeQgEkpk3DbjNTVbGbQzVF\nHuXw+Up/uX+9yGQCE29N4+evzCApI5YkETIRiAYEpEQITwh5CwWg0SbQHZFA8cnPWNvWiVwm5/Hs\n2W6zjQNFRKSKB+dm82+/206SEzKQYUWkUYAEndr9Aa5jXLZQ586dY+nSpbz++uusXr06YE40d7Wy\nqaGSWLmMTJUCh9PhcbZxoIjWa/jZg5mUyKEIJ20CJMtkrFuxm435+yk5WY/YT4To9T6Id9lC5efn\nM3z4cMrLy10+FWGwVLRUUWGzccIq475INRZRpMTmGFS2sT+4cswVoZRz5EAVBd+Xs+HdvcTEaZl0\nWxrZN6cSqVVJ2cy4EVRFRQWPPPIICxcuJDc3lw8++CAgTqQbU5DL5Hxm7uYhrcDDWg2bO62Dzjb2\nB9F6DZMuG2/dcscIbr49nYrSRgq+q2DHthN89UUxGZmJfHq0Grvz+h7EuxRUfHw8Wq0WhUJx8fFm\n/eHtw4OuxBhh4PHs2aw//AlbzBZm6yKYo41A1lkHIWyhBkIQBNJHxZE+Ko6ONguF+87yw7dl3OAU\nMAMNiLQAtguD+EluBNXcZun3zjMc8DaNShBdLPeXlJTw9ttvExUVxZQpU3jggQc8dqQ3jWrHjh0e\np+G0dLVS3lLFcL2J88V/paO5nNETFxIVE/7dRmNLJ//5//5BnBP0gIBAJyLTbh9BVk4SqWnRyORX\nD1nDtZv05fqBmxZq1KhRLF++fNDOeYoxwnBxzGTMmc+Zg3/mTOGfGT3xKXTRI4Lmhy/EGiOZ82Am\n+VuLwCESLcCEZCPHC89x4Lty1BoFI8fEM3pcAqPGJhCl1/TZWxSujW4yLKYN+kMmVzFqQi5nDq7l\n9MH3GDPpabTG4aF2yyX9TZw6nSLVlS2cPlFHSXE9WzYeBsCUrEcbr0XjELl80cnuYTcZroStoADk\nChUZE3M5fWAtpw+uYfTkZ9DqQz9Qd8WVg3iZTCAlLZqUtGjuuncsHe3dlJys58yJes4U1zMOGXZ6\nRNUJWGQQr1UhiiKCMPSezhXWgoKeTJnRExdy6sC7nC54lzE3LyYyyvcs5lCji1KTPTmV7MmpOB1O\nNm4t4tvdZUSIEA8onQLrlu8mUqdiWIqBYSlGklIMDEsxoDdGIAhCUAbxrT6G9IS9oADkyghGT1rE\nqYILopq8mIgoU6jdGjQyuYx/efhG7p0xmtLqVkYM0yN3Qk1VC9VVrdRUtXBwTwW7O3rumCO1KuRa\nJacbOugQRewygbn3jeWfZozxq19bdpXwp42+5U4OCUEBKJSRjJm0iFMFeZw68KceUekSQ+2WX7iy\nmzRERzD2xmEAiKJIW4uFmqoWSksa2bGrlFjAhAyccHTbSU5/VUpsnJaYOC3RsVpi4iIvvGqJ1Km8\n6jp7bxQcDt9i/YeMoAAUKi2jJz3TI6qCP3HDzc+i0caH2q2AIggChugIDNERmJUyTl0IoVEgogbU\nwL1jE4gQBJrOmyk91YC549IcoEotJyZWi9agwSETGJYYRXy8Fp1eg06vJipKQ6RWhXDhaapXPoTA\nW4aUoACUah1jJj/Nyf15FO9fjZj+Y0YkjscYhhOg/qY3SNDuELEDdqBbLnDvrPF9xlLdFhvNjZ00\nnTfTdN7MoaJaTp+oQwGcKapFccXuf4JMQKdTo9OrUUcqGSEItCBQ5oOPQ05QAEq1nqqYLBQVO4g8\n+Vf+5+hGRoz6KfeOvy/UrgWU3iDByydC+9u5T61RYko2YEo20NRm4fd/O4GdS62OUgZ/+Pk05E6R\njnYL7W3ddLR309FmoaOtm1R9BAofs82GpKCau1p5v+hz1KKTWzRKctRK5JU7OG1vYXjGj1FHXrtP\nWHcVJNgf/XVhNqdIY5eVSWMHHoMWFZewbefrXvs3JAVV0VKFw+mgE/i6y8oei5UJaiXTG4o4VltI\ntCkb04i7+p1e6F3eSTemDNlu8spBvCsu7yZ78WSDW4OPcV9DUlC90QmOC3sjWETYZ3Xy5JTnsTed\npK78G0788Bb6uLGYRtxFVPRIAD4/tZP1hz/B4XSEPIgvWHjaTfqLISmoy6MTesXxRPYcYnTxoIsn\nPuU2mmoKqS3/ilP7V6M1pqNLmnKxPHAxiG9q6qQh21J5irfd5GAYkoICuH/MDKamTuq3+xJkcmKT\nJxOTNJHWhuPUlO6k7vhGntSp2GuxUWqz0yX2iCrUQXzBwptucjAEXFC21lbwIvzBGy6PTugPQZBh\nTMjCEJ9Jbe0Ryg6+zwPani+12eGk1uHEaK7G3BJFhD4Jmezqr+NaGHMFk4AL6ujLS1E/vYikWTMD\nbWpABEFg2LBsIkc/wJojm0iUQYpSwY1RsTSV7aCxdDuCICdSn4zWMPzi347KQ6w/sum6GnMNloAL\nSrQ7KF/3AXF3TEUVHR1ocy7pr5t0Omx0tp/D3FqJubWClvoi6s/uBiDKKfJwhJJGp5wOp8i+458y\nQR9HtD4JpUqPXKFyY3Ho4smDM/vDraCqq6t57rnnGDduHAkJCSxZssQrA05BQLTbMZeVh1xQcHU3\nKZMr0RnT0RnTgWkA2LrbOVa+m0PFX5KkkHGDUoFOJqAQBKqPrKe6t65Cg0qtR6mKQqnRo1TpsctV\nNFktJOqHERURjVyuQqZQIZOre/6XqxBkikGFpvjSDXtT5/NTO1n79QaffHMrqP379xMf37NeNmHC\nBK8N/DD9Ph44uAvtiHSv64YKpTqKEcOnsuzINhyWS+tiWrmcN370AhrBia27DVt3G9buNmzd7XR3\nNVHfUAy2ThSCQC1QO5ABQXZRXDK5GlGQY3U60CgjUCp6BSdDEOQIMjmCIEd24bWitZqi82ewO0V2\nCwI3Jo5ldNxIBAQQZBeEeuFVkCEgUNRwmr3nDuF0OhFkMm5NmcCNieMAoSeD9cJSjICA2dbFgeOf\nMlIuUOTDd+dWUDfddBO33347sbGxzJ8/n2nTpiGXyz02UGdKZfeT/84tUXof3Asd/U1N/PNNc0iI\ny+i3fHNXK7/9bCkOpwMVoBQENHI5r07/OVqFCoejG6fditNh7fnf0fP/mfNnOHP+DDJRRCEIjDCm\nkKiNRRQdOB02RNGB6HQgig7sDitdbbVkKOTIAEEAsfkM9Z11CIiIiCD2vjoRRRFRdKJ12rlHo7zU\nKjYWUdE4sFzuj1TR0GVnqw/fm1tBnThxgpycHARBQKvV4nQ6rxKUq6yX+WOT+KRNxpt7T/P8zRlE\nqYbOTIWrqYkr6Z29B7ACVlHEbLdTY7eTE39Dv3Wau1pZXbj1Yj0AeVcZqx94ql9bh2qKWPvtyqve\n/9X0BWQPy+zXxqGaIt7op84r0/6NHNM4gB4BAogiLV2tPP/Fq3S19izm+f3hQWlpaSxbtozY2Fju\nvPNOlMqrN7Nw9fCg0SkJvBgVw/L9Z1j2w0mW3DKamIihM5h1NzXRy5Wz9wBymdxlbuHlIuzF1dyY\nLzYGqjMiOhVB1tMwXD6ai9HF8S/Zsy+Oofz+8KDMzEyWL1/Or3/96wFV6Y40QyQv3ToGq8PJGz+c\norbj2kvT7u0i5RcuUu/svatWrfdiX44rgfhiw5c694+ZwWszXhzwc1e4zMsbDP3ldTV2WXlr32k6\nbQ5euCWD4frIQJgOKd7egV25vvhE9hzuG3OXX234UicgeXn+JjZCxUu3jmHF/jO8uecU/z45g9Ex\nA2ckD0U87SJ78Wac5qsNX+v4QtD3h9KrlfxiyhhS9ZEs33eao/XSfkvGCAM5wzLDamnH1urbdQnN\nxvdKOc/fnMHYuChWHShhb3VTKNyQGIDqrds4+vJSn+qGbAc7lVzGsxNHMXlYNO8dKufrigaszc00\nHyzE2uzZ8/S8LR8MguFTIG1Ym5opX/cBot235/CEdFJIIRPIzU4nUqlgQ1ElJwq+4cYDu5EpFKTP\nf8LlgnL11m0XTtyO4EH5YOCrT9bmZsxl5WhHpLtdngr0eZvLyxHtvj8VNeSzjDJBYI5JS/OmzRyc\nfCeHs6cS0dVB5HkzSXuKiY7SYlArMaqVGDQKDGolkV2dlK37AC6cuGi3e7wA7c3F84ZLv2zvfPJG\nIL7aAM/PWzsiHUGhAC+2Y7qckAsKoLOigpz9X5NQXUFTbAJdkTq6IrV0dHRSZ3XSarHReUUTLMx/\nkYguM6puC4IoIogif99fhlJbh0wQEAQuvdLzamtooKuyCkQRYd9pIlJTiEjsP1Df27VbW0sr7TMe\nvur9fQfLUBr7HyOKVhvNle1web3KdqJ/KEZQXT2B7IsNAEttHZ0VZ0EUYc9JItOGozENnKBgyX2e\n+qOHofTUgGUGIiwE1furSDpXRtK5nmwwQaFg8hMPXvw1WR1OWrtttHbbaGxs4ei6DXRpIrGq1IiC\ngCiXE5eZAUoVIuAURZxiz7KCUwRHt5X2s5eeyC6KIp2VVSijo5FdNvsvXvGP02bD0dmFPDKiT7kr\nESMicCiUPRetF0FAjIi4uKvdldjMnThkV6+LWsydKBVXr336YsNptdFeVQ2X2WmvqkZ2xXlfjiIh\ngcjx4/r9zB1hIShVdDTp85/o2/QveLJP06ySy4iPVBMfqSYjWkfqlKyryidNHjjHv/lgIce//Piq\n98ffMproif1/ed6OV6obS6/2aerAF8ba3EzB6jf6jFkEhYLJj+YN2C15a6P5YCHHP/+fq94ff/P/\nGfC8AaqqNHw44KcDExaCAkiaNZO4O6Z6PL7xtnxvK3jlxRsorMaX8Yq3PnnyQxqsDW/Pe7CEjaCg\n5wv2ZqDsTXlvL15/dzueBAp6ew7eCsRbG76IdjCElaACjTcXL5i/bG9F6C2+iNZXritBgecXL9i/\n7EATaNH2ct0JyhuC+cu+VpAE5YZg/bKvFcLiaVQS1w4eCerFF1/k888/D7QvEtcAbru8devWodVq\nvT6ww9GzVFJbO2AykUQY03vdeq+jp7gMAd65cyfNzc3IZDLUajX3339/v+X6y3oxm82Ul5d75YxE\n+JGenn5Vg+Lzs16WLFmCwWCgtLQUpVLJH/7wBwwGz6IKLRYLDz30EO+++65XeXyLFy8mLy8vYOWD\nYSMcffK2jsPh4Omnn+bTTz9Fo/F81xaXXd5bb70FwObNm1GpVB6LCUCj0aDVaklLS/O4DoBKpfIq\nKN7b8sGwEY4++VJHq9V6JSbwcNrg4YevDpmQkOgPadpAwq9IgpLwK/JXX3311UAayMrKCnidcLQR\njj4Fw0bAMoclrk+kLk/Cr0iCkvArkqAk/IokKAm/EpB4qIqKCl544QU2bdrEe++9x7lz5+jo6OCV\nV14h+rLYosLCQj766CN0Oh0xMTFoNJoBy15+7BUrVhATE0NmZiZNTU1u60BPxMSMGTOoqalxW/7K\njWr1er3LOufOneOdd95Bp9NhMBhQq9VubWzYsIFjx45hs9k4ePAg8+bNc1mnrq6OlStXotP17FYT\nFxfnsvzhw4fJz88nPj6enJwcamtrXZZ3dc2sVitvvPEGRqORUaNGMW/evH6/YwBEP9PQ0CC++eab\n4mOPPSZ2d3eLzzzzjCiKorhnzx4xLy+vT9mvv/5aNJvNoiiKYm5urrh48eIBy/Zy7NgxsaqqSrTZ\nbB7Xyc/PF3/zm9+I27Zt86j85s2bxaeeekp8+eWXxZ07d7qt87vf/U7My8sTX375ZfGbb77xyEYv\nb775plhYWOi2zvfffy/ec8894gsvvCCuXr3abfnXXntNLC4uFkVRFJcsWSLm5uYOWH6ga7Z3714x\nLy9PXLFihVhYWCiKoiguWrRItNvtA56P31uouLg4fvGLX7Bo0SJaW1uJi+t51JjJZKKhoaFP2Tvv\nvBPo2XZv1qxZFBQUDFi2l8zMTOrq6njmmWeYMmUKZ8+edVln586dREVFkZOTg9PpJDY21q2N3o1q\n4+LiePLJJ0lNTXVZp6KigkceeYSnnnqKBQsWMHz4cLc2AEpLS7Hb7SQlJbn1y2QykZ+fT0pKCrm5\nuZhMJpfl58+fz6pVqzAajTQ2NpKcnDxg+YGuWWJiIvX19dhsNoYN63lkrV6vp729HaPR2O85BXQM\nFRsbS0tLC9ATX5OQkNDnc7PZzNKlS8nJyWHWrFkuy/ZSXFyMWq3mvffe49ixYzRf2IFkoDpbt27l\n6NGjbNq0iY8//pjGxka3Nk6cOHFx01m1Wk19fb3LOvHx8Wi1WuRyORqNxqPzAPjwww95/PHH3X5P\n0NNFtrf3bEav0+morq52Wb6mpobnnnuOl156CY1G49F5w9XXLDExkaSkJGpqagBoa2tDrx94R+eA\nTWwuWrSINWvWsH79ekpLS2lra+O3v/3txTEAwK9+9SvOnj1LUlIScrmc8ePHD1i2lyNHjrB27VpM\nJhNKpRKTyeS2DlyKmGhsbHRbvqioiDVr1hAbG8uYMWOwWq0u65SUlPD2228TFRXFlClTaG5u9sin\nBQsWkJ+fD+DyewI4fvw4f/zjH0lOTiY5ORmlUumyfGVlJcuWLUOv15OTk4PFYnHr00DXzGKx8Prr\nr6PT6cjKymLu3Ln9ng9IM+USfkaaNpDwK5KgJPyKJCgJvyIJSsKvSIKS8CuSoCT8iiQoCb/y/wGh\nkJIAOekdQQAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x22b39d020f0>"
+       "<matplotlib.figure.Figure at 0x22b39ed8e10>"
       ]
      },
      "metadata": {},
@@ -283,6 +281,8 @@
     "dH = result[2]\n",
     "dS = result[3]\n",
     "\n",
+    "print(result)\n",
+    "\n",
     "plt.plot(t, C_A[:n1], 'o')\n",
     "plt.plot(t, C_A[n1:n2], 'o')\n",
     "plt.plot(t, C_A[n2:], 'o')\n",
@@ -295,7 +295,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  4.13135851e+00   2.40492228e+04   8.89303403e+03   2.82700687e+01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "standard_errors = np.sqrt(np.diag(cov))\n",
+    "print(standard_errors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -306,7 +326,7 @@
      "text": [
       "ParameterSet(logA=6.0, Ea=45.0, dH=-10.0, dS=-50.0)\n",
       "ParameterSet(logA=0, Ea=0, dH=0, dS=0)\n",
-      "ParameterSet(logA=0, Ea=0, dH=0, dS=0)\n"
+      "[  4.13135851e+00   2.40492228e+04   8.89303403e+03   2.82700687e+01]\n"
      ]
     }
    ],
