Added formatting and error. Error is very wrong

--- a/FittingExercise.ipynb
+++ b/FittingExercise.ipynb
@@ -281,8 +281,6 @@
     "dH = result[2]\n",
     "dS = result[3]\n",
     "\n",
-    "print(result)\n",
-    "\n",
     "plt.plot(t, C_A[:n1], 'o')\n",
     "plt.plot(t, C_A[n1:n2], 'o')\n",
     "plt.plot(t, C_A[n2:], 'o')\n",
@@ -295,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -309,13 +307,26 @@
     }
    ],
    "source": [
-    "standard_errors = np.sqrt(np.diag(cov))\n",
-    "print(standard_errors)"
+    "stderr = np.sqrt(np.diag(cov))\n",
+    "print (stderr)\n",
+    "\n",
+    "optimized_parameters = ParameterSet(\n",
+    "    logA = round(result[0]), # base-ten logarithm of A in s^-1\n",
+    "    Ea = round(result[1]/1000) , # Ea in kJ/mol\n",
+    "    dH = round(result[2]/1000) , # ∆H in kJ/mol\n",
+    "    dS = round(result[3])  # ∆S in J/mol/K\n",
+    "    )\n",
+    "standard_errors = ParameterSet(\n",
+    "    logA = round(stderr[0]), # base-ten logarithm of A in s^-1\n",
+    "    Ea = round(stderr[1]/1000) , # Ea in kJ/mol\n",
+    "    dH = round(stderr[2]/1000) , # ∆H in kJ/mol\n",
+    "    dS = round(stderr[3])  # ∆S in J/mol/K\n",
+    "    )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -325,8 +336,8 @@
      "output_type": "stream",
      "text": [
       "ParameterSet(logA=6.0, Ea=45.0, dH=-10.0, dS=-50.0)\n",
-      "ParameterSet(logA=0, Ea=0, dH=0, dS=0)\n",
-      "[  4.13135851e+00   2.40492228e+04   8.89303403e+03   2.82700687e+01]\n"
+      "ParameterSet(logA=9.0, Ea=64.0, dH=-12.0, dS=-37.0)\n",
+      "ParameterSet(logA=4.0, Ea=24.0, dH=9.0, dS=28.0)\n"
      ]
     }
    ],
@@ -336,6 +347,15 @@
     "print(optimized_parameters)\n",
     "print(standard_errors)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
